alles ff goed gerund

--- a/Final Assignment EPA1361/Model and Notebooks/3. Uncertainty Analysis.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/3. Uncertainty Analysis.ipynb
@@ -55,8 +55,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-21T13:55:40.647136100Z",
-     "start_time": "2023-06-21T13:55:37.828171400Z"
+     "end_time": "2023-06-21T16:07:20.046489300Z",
+     "start_time": "2023-06-21T16:07:17.279325200Z"
     }
    }
   },
@@ -89,8 +89,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-21T07:11:22.373545800Z",
-     "start_time": "2023-06-21T07:11:21.187308800Z"
+     "end_time": "2023-06-21T16:07:27.981473600Z",
+     "start_time": "2023-06-21T16:07:27.347262400Z"
     }
    }
   },
@@ -113,8 +113,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-21T07:11:26.106952500Z",
-     "start_time": "2023-06-21T07:11:26.085505800Z"
+     "end_time": "2023-06-21T16:07:29.859271800Z",
+     "start_time": "2023-06-21T16:07:29.853923800Z"
     }
    }
   },
@@ -141,8 +141,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-21T07:11:27.287066800Z",
-     "start_time": "2023-06-21T07:11:27.243552Z"
+     "end_time": "2023-06-21T16:07:32.881244900Z",
+     "start_time": "2023-06-21T16:07:32.866994100Z"
     }
    }
   },
@@ -165,8 +165,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-20T19:15:01.452756700Z",
-     "start_time": "2023-06-20T19:15:01.431983200Z"
+     "end_time": "2023-06-21T16:07:34.777262200Z",
+     "start_time": "2023-06-21T16:07:34.771676300Z"
     }
    }
   },
@@ -222,14 +222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "        A.0_ID flood wave shape    A.1_Bmax A.1_Brate  A.1_pfail    A.2_Bmax   \n0                           123  114.999161       1.5   0.097214  267.026880  \\\n1                            12  114.507209      10.0   0.539099  117.390183   \n2                            93   67.728956       1.0   0.518512  105.078120   \n3                            76  189.885408      10.0   0.381116  147.348388   \n4                           105  220.684581      10.0   0.822199  341.672453   \n...                         ...         ...       ...        ...         ...   \n224995                       31  289.668313       1.0   0.052410   99.791409   \n224996                       69  314.054116       1.0   0.103507  181.102471   \n224997                       12  199.471980       1.0   0.020007  118.888179   \n224998                       65  319.848416       1.5   0.459135   97.898038   \n224999                       58  346.554302       1.0   0.187809  198.736924   \n\n       A.2_Brate  A.2_pfail    A.3_Bmax A.3_Brate  A.3_pfail  ...   \n0           10.0   0.534503   41.222939       1.5   0.074974  ...  \\\n1            1.5   0.810281  209.314732       1.0   0.011289  ...   \n2           10.0   0.700256   89.773865      10.0   0.407997  ...   \n3            1.0   0.320509  329.767171       1.0   0.035767  ...   \n4           10.0   0.331055  210.102760      10.0   0.801983  ...   \n...          ...        ...         ...       ...        ...  ...   \n224995       1.5   0.475975  117.906512       1.5   0.997902  ...   \n224996       1.5   0.875119   69.791147       1.0   0.342026  ...   \n224997       1.0   0.490355  325.124367      10.0   0.750680  ...   \n224998       1.5   0.945095  327.164295       1.5   0.325334  ...   \n224999      10.0   0.409980   93.531855       1.0   0.294995  ...   \n\n        A.3_DikeIncrease 2 A.4_DikeIncrease 0  A.4_DikeIncrease 1   \n0                        0                  3                   0  \\\n1                        0                  3                   0   \n2                        0                  3                   0   \n3                        0                  3                   0   \n4                        0                  3                   0   \n...                    ...                ...                 ...   \n224995                   0                  2                   0   \n224996                   0                  2                   0   \n224997                   0                  2                   0   \n224998                   0                  2                   0   \n224999                   0                  2                   0   \n\n        A.4_DikeIncrease 2 A.5_DikeIncrease 0  A.5_DikeIncrease 1   \n0                        0                  0                   0  \\\n1                        0                  0                   0   \n2                        0                  0                   0   \n3                        0                  0                   0   \n4                        0                  0                   0   \n...                    ...                ...                 ...   \n224995                   0                  0                   0   \n224996                   0                  0                   0   \n224997                   0                  0                   0   \n224998                   0                  0                   0   \n224999                   0                  0                   0   \n\n       A.5_DikeIncrease 2 scenario policy     model  \n0                       0        0      0  dikesnet  \n1                       0        1      0  dikesnet  \n2                       0        2      0  dikesnet  \n3                       0        3      0  dikesnet  \n4                       0        4      0  dikesnet  \n...                   ...      ...    ...       ...  \n224995                  0     4995     44  dikesnet  \n224996                  0     4996     44  dikesnet  \n224997                  0     4997     44  dikesnet  \n224998                  0     4998     44  dikesnet  \n224999                  0     4999     44  dikesnet  \n\n[225000 rows x 53 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A.0_ID flood wave shape</th>\n      <th>A.1_Bmax</th>\n      <th>A.1_Brate</th>\n      <th>A.1_pfail</th>\n      <th>A.2_Bmax</th>\n      <th>A.2_Brate</th>\n      <th>A.2_pfail</th>\n      <th>A.3_Bmax</th>\n      <th>A.3_Brate</th>\n      <th>A.3_pfail</th>\n      <th>...</th>\n      <th>A.3_DikeIncrease 2</th>\n      <th>A.4_DikeIncrease 0</th>\n      <th>A.4_DikeIncrease 1</th>\n      <th>A.4_DikeIncrease 2</th>\n      <th>A.5_DikeIncrease 0</th>\n      <th>A.5_DikeIncrease 1</th>\n      <th>A.5_DikeIncrease 2</th>\n      <th>scenario</th>\n      <th>policy</th>\n      <th>model</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>123</td>\n      <td>114.999161</td>\n      <td>1.5</td>\n      <td>0.097214</td>\n      <td>267.026880</td>\n      <td>10.0</td>\n      <td>0.534503</td>\n      <td>41.222939</td>\n      <td>1.5</td>\n      <td>0.074974</td>\n      <td>...</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>dikesnet</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>12</td>\n      <td>114.507209</td>\n      <td>10.0</td>\n      <td>0.539099</td>\n      <td>117.390183</td>\n      <td>1.5</td>\n      <td>0.810281</td>\n      <td>209.314732</td>\n      <td>1.0</td>\n      <td>0.011289</td>\n      <td>...</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>dikesnet</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>93</td>\n      <td>67.728956</td>\n      <td>1.0</td>\n      <td>0.518512</td>\n      <td>105.078120</td>\n      <td>10.0</td>\n      <td>0.700256</td>\n      <td>89.773865</td>\n      <td>10.0</td>\n      <td>0.407997</td>\n      <td>...</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>0</td>\n      <td>dikesnet</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>76</td>\n      <td>189.885408</td>\n      <td>10.0</td>\n      <td>0.381116</td>\n      <td>147.348388</td>\n      <td>1.0</td>\n      <td>0.320509</td>\n      <td>329.767171</td>\n      <td>1.0</td>\n      <td>0.035767</td>\n      <td>...</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>dikesnet</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>105</td>\n      <td>220.684581</td>\n      <td>10.0</td>\n      <td>0.822199</td>\n      <td>341.672453</td>\n      <td>10.0</td>\n      <td>0.331055</td>\n      <td>210.102760</td>\n      <td>10.0</td>\n      <td>0.801983</td>\n      <td>...</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>4</td>\n      <td>0</td>\n      <td>dikesnet</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>224995</th>\n      <td>31</td>\n      <td>289.668313</td>\n      <td>1.0</td>\n      <td>0.052410</td>\n      <td>99.791409</td>\n      <td>1.5</td>\n      <td>0.475975</td>\n      <td>117.906512</td>\n      <td>1.5</td>\n      <td>0.997902</td>\n      <td>...</td>\n      <td>0</td>\n      <td>2</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>4995</td>\n      <td>44</td>\n      <td>dikesnet</td>\n    </tr>\n    <tr>\n      <th>224996</th>\n      <td>69</td>\n      <td>314.054116</td>\n      <td>1.0</td>\n      <td>0.103507</td>\n      <td>181.102471</td>\n      <td>1.5</td>\n      <td>0.875119</td>\n      <td>69.791147</td>\n      <td>1.0</td>\n      <td>0.342026</td>\n      <td>...</td>\n      <td>0</td>\n      <td>2</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>4996</td>\n      <td>44</td>\n      <td>dikesnet</td>\n    </tr>\n    <tr>\n      <th>224997</th>\n      <td>12</td>\n      <td>199.471980</td>\n      <td>1.0</td>\n      <td>0.020007</td>\n      <td>118.888179</td>\n      <td>1.0</td>\n      <td>0.490355</td>\n      <td>325.124367</td>\n      <td>10.0</td>\n      <td>0.750680</td>\n      <td>...</td>\n      <td>0</td>\n      <td>2</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>4997</td>\n      <td>44</td>\n      <td>dikesnet</td>\n    </tr>\n    <tr>\n      <th>224998</th>\n      <td>65</td>\n      <td>319.848416</td>\n      <td>1.5</td>\n      <td>0.459135</td>\n      <td>97.898038</td>\n      <td>1.5</td>\n      <td>0.945095</td>\n      <td>327.164295</td>\n      <td>1.5</td>\n      <td>0.325334</td>\n      <td>...</td>\n      <td>0</td>\n      <td>2</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>4998</td>\n      <td>44</td>\n      <td>dikesnet</td>\n    </tr>\n    <tr>\n      <th>224999</th>\n      <td>58</td>\n      <td>346.554302</td>\n      <td>1.0</td>\n      <td>0.187809</td>\n      <td>198.736924</td>\n      <td>10.0</td>\n      <td>0.409980</td>\n      <td>93.531855</td>\n      <td>1.0</td>\n      <td>0.294995</td>\n      <td>...</td>\n      <td>0</td>\n      <td>2</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>4999</td>\n      <td>44</td>\n      <td>dikesnet</td>\n    </tr>\n  </tbody>\n</table>\n<p>225000 rows × 53 columns</p>\n</div>"
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,8 +242,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-21T15:13:28.005371Z",
-     "start_time": "2023-06-21T15:13:27.825167700Z"
+     "end_time": "2023-06-21T16:07:46.637732300Z",
+     "start_time": "2023-06-21T16:07:46.502554700Z"
     }
    }
   },
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "policies_all_scenarios = pd.DataFrame()\n",
@@ -268,7 +268,10 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-06-21T16:07:51.390096200Z",
+     "start_time": "2023-06-21T16:07:51.130914300Z"
+    }
    }
   },
   {
@@ -282,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "experiments_and_results = pd.concat([experiments,policies_all_scenarios], axis=1)\n",
@@ -292,7 +295,10 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-06-21T16:07:52.422158700Z",
+     "start_time": "2023-06-21T16:07:52.258325300Z"
+    }
    }
   },
   {
@@ -306,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "def combine_columns(dataframe, name):\n",
@@ -319,12 +325,15 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-06-21T16:07:53.617702100Z",
+     "start_time": "2023-06-21T16:07:53.583718600Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "combine_columns(policies_all_scenarios, 'Expected Annual Damage')\n",
@@ -335,7 +344,10 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-06-21T16:07:54.645523200Z",
+     "start_time": "2023-06-21T16:07:54.456360900Z"
+    }
    }
   },
   {
@@ -349,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "aggregated_outcomes = pd.concat([experiments[['scenario','policy']],policies_all_scenarios.iloc[:,-5:]], axis=1)\n",
@@ -364,7 +376,19 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-06-21T16:07:55.658580200Z",
+     "start_time": "2023-06-21T16:07:55.599660700Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
