--- a/Final Assignment EPA1361/Model and Notebooks/2a. Open Exploration.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/2a. Open Exploration.ipynb
@@ -148,6 +148,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Model run"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "outputs": [
