--- a/Final Assignment EPA1361/Model and Notebooks/2b. MOEA.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/2b. MOEA.ipynb
@@ -330,7 +330,16 @@
    "cell_type": "markdown",
    "source": [
     "\n",
-    "Then, the model can be run. Results (pareto set of policies) are saved. A population size of 5 was chosen, as this LEG UIT."
+    "Then, the model can be run. Results (pareto set of policies) are saved. A population size of 5 was chosen."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Model run"
    ],
    "metadata": {
     "collapsed": false
