the (semi) final cleanse

--- a/Final Assignment EPA1361/Model and Notebooks/2b. MOEA.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/2b. MOEA.ipynb
@@ -481,6 +481,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "shows the relative tradeoffs. as damage costs and death costs increase, dike investments and investment costs tend to act acccordingly."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
