final clean (for real this time)

--- a/Final Assignment EPA1361/Model and Notebooks/2a. Open Exploration.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/2a. Open Exploration.ipynb
@@ -401,6 +401,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "The relevant factors are added up for better representation for our problem owner"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "outputs": [
@@ -530,7 +539,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "These diagrams show the total cost, in this case the cost of investment, the death costs, and the annual damage cots.\n"
+    "These diagrams show the total cost, in this case the cost of investment, the death costs, and the annual damage cots, for the bade case. ie. when nothing is changed.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -613,6 +622,15 @@
      "end_time": "2023-06-16T16:42:10.214673400Z",
      "start_time": "2023-06-16T16:42:08.124444400Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "the density coverage map is plotted for the death costs."
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
