detele tmp map, change plot x axis label

--- a/Final Assignment EPA1361/Model and Notebooks/2b. MOEA.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/2b. MOEA.ipynb
@@ -424,7 +424,7 @@
     "convergence = pd.read_pickle(r'../generated_datasets/initial_Pareto_policies_convergence.pkl')\n",
     "\n",
     "plt.plot(convergence.epsilon_progress)\n",
-    "plt.xlabel(\"nr. of generations\")\n",
+    "plt.xlabel(\"Number of function evaluations\")\n",
     "plt.ylabel(r\"$\\epsilon$ progress\")\n",
     "sns.despine()\n",
     "plt.savefig(r'../Visualizations/MOEA/epsilon_progress_robust_optimize.png', bbox_inches='tight')\n",
